--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+body {
+    background-size: cover;
+    background-position: center;
+}
+
 /* tidak ada koneksi */
 #tidakAdaKoneksi {
     display: none;
