--- a/style.css
+++ b/style.css
@@ -1,6 +1,4 @@
 body {
-    background-size: cover;
-    background-position: center;
 }
 
 /* tidak ada koneksi */
@@ -14,6 +12,26 @@ body {
 
 .content {
     margin-right: 60px;
+}
+.background {
+    width: 100%;
+    min-height: 100vh;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.pagi {
+    background-image: url('https://raw.githubusercontent.com/aflacake/piodrink/second/img/latarbelakangpagihari.png');
+}
+.siang {
+   background-image: url('https://raw.githubusercontent.com/aflacake/piodrink/second/img/latarbelakangsianghari.png'); 
+}
+.sore {
+    background-image: url('https://raw.githubusercontent.com/aflacake/piodrink/second/img/latarbelakangsorehari.png');
+}
+.malam {
+    background-image: url('https://raw.githubusercontent.com/aflacake/piodrink/second/img/latarbelakangmalamhari.png');
 }
 
 progress::webkit-progress-value {
