--- a/style.css
+++ b/style.css
@@ -16,9 +16,23 @@ body {
 .background {
     width: 100%;
     min-height: 100vh;
+    position: relative;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+    z-index: -1;
+}
+.background::before {
+    content: "";
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    opacity: 0;
+    transition: opacity 2s ease;
+    z-index: -1;
 }
 
 .pagi {
